# Domshka_Nitologij

Algoritmika/Urok1/Zadanie1/: Оценка алгосложности программы.txt
Algoritmika/Urok1/Zadanie2/: .gitignore  Search_Array.cpp  Search_Array.sln  Search_Array.vcxproj  Search_Array.vcxproj.filters
Algoritmika/Urok2/Zadanie1/: .gitignore  Cislo_Fi.cpp  Cislo_Fi.sln  Cislo_Fi.vcxproj  Cislo_Fi.vcxproj.filters  Оценка алгосложности функции.txt
Algoritmika/Urok2/Zadanie2/: .gitignore  Cislo_Fi++.cpp  Cislo_Fi++.sln  Cislo_Fi++.vcxproj  Cislo_Fi++.vcxproj.filters
Algoritmika/Urok3/Zadanie1/: .gitignore  Merge sort.sln  Merge sort.vcxproj  Merge_sort.cpp
Algoritmika/Urok3/Zadanie2/: .gitignore  Quick sort.sln  Quick sort.vcxproj  Quick_sort.cpp
Gonki/Simuljator_Gonok/: .gitignore  Simuljator_Gonok.sln
Gonki/Simuljator_Gonok_CMake/: CMakeLists.txt
Gonki/Simuljator_Gonok_CMake/Gonka_Class/: Broadcast_Gonki_Class.cpp  CMakeLists.txt  Gonka_Class.h
Gonki/Simuljator_Gonok_CMake/Menu/: CMakeLists.txt  Menu.cpp  Menu.h
Gonki/Simuljator_Gonok_CMake/Racing_Simulator/: CMakeLists.txt
Gonki/Simuljator_Gonok_CMake/Vehicles_Class/: Botinki_Vezdehody_Class.h  CMakeLists.txt  Class_Air_TC.h  Class_Land_TC.h  Class_TC.h  Kentavr_Class.cpp  Kentavr_Class.h  Kover_Samolet_Class.cpp  Kover_Samolet_Class.h  Metla_Class.cpp  Metla_Class.h  Orel_Class.h  Verblud_Bystrohod_Class.h  Verblud_Class.h
ProdProgramer/Urok3/Zadanie2/: CMakeLists.txt  ListTest2.cpp
ProdProgramer/Urok3/Zadanie2/List_class/: CMakeLists.txt  List_class.cpp  List_class.h
Qt/Airport_Inspector_1_0/: CMakeLists.txt  database.cpp  database.h  dialog_statistics.cpp  dialog_statistics.h  dialog_statistics.ui  graphicbar.cpp  graphicbar.h  graphicchart.cpp  graphicchart.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resursy.qrc
Qt/Poiskovik/: CMakeLists.txt  configurations.ini  database.cpp  database.h  headingfile.cpp  headingfile.h  headingfile.ui  http_client.cpp  http_client.h  main.cpp  mainpaint.cpp  mainpaint.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser_html.cpp  parser_html.h  parser_html_1.cpp  parser_html_1.h  recursion.cpp  recursion.h  splashscreen.cpp  splashscreen.h  splashscreen.ui
Qt/Urok2/: CMakeLists.txt  main.cpp
Qt/Urok3/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Urok4/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resurses.qrc
Qt/Urok5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  signal_time.cpp  signal_time.h
Qt/Urok6/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Qt/Urok7/: CMakeLists.txt  graphicchart.cpp  graphicchart.h  graphicchart.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowchart.cpp  mainwindowchart.h  mainwindowchart.ui
Qt/Urok8/: CMakeLists.txt  database.cpp  database.h  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
SQL/Urok2/: music_service.txt
SQL/Urok4/: Script-1.sql  Script-2.sql  Script-3.sql  Script-4.sql
SQL/Urok5/CMakeSql/: CMakeLists.txt  CMakeSql.cpp  CMakeSql.h  Class_Persons.cpp
UE5/Urok1/: CppBaseActor.cpp  CppBaseActor.h
Urok1/Zadanie1/: months.cpp  months.txt
Urok1/Zadanie2/: Accounts.cpp  Accounts.txt
Urok1/Zadanie3/: Address.cpp  Address.txt
Urok10/Zadanie3/LeaverCMake_DLL/Leaver_Class/: CMakeLists.txt  Leaver.cpp  Leaver.h
Urok10/Zadanie5/Figures_Infos_DLL_CMake/Figure_Class/: CMakeLists.txt  Class_Equilateral_Triangle.cpp  Class_Figure.cpp  Class_Figure.h  Class_Isosceles_Triangle.h  Class_Quadrangle.cpp  Class_Rhombus.h  Class_Right_Triangle.cpp  Class_Triangle.cpp  Class_Triangle.h
Urok2/Zadanie1/: kalkulator.cpp  kalkulator.txt
Urok2/Zadanie2/: Counter.cpp  Counter.txt
Urok3/Zadanie1/: In_Out_Addres.cpp  In_Out_Addres.txt
Urok3/Zadanie2/: Sortir_Adresov.cpp  Sortir_Adresov.txt
Urok4/Zadanie1/: .gitignore  Figure.cpp  Figures.sln  Figures.vcxproj
Urok4/Zadanie2/: .gitignore  Figure_side_corner.sln  Figure_side_corner.vcxproj  Figure_side_corner.vcxproj.filters  Figures_sides_corners.cpp
Urok4/Zadanie3/: .gitignore  Figures_ Info.cpp  Figures_Infos.sln  Figures_Infos.vcxproj  Figures_Infos.vcxproj.filters
Urok5/Zadanie1/: .gitignore  Math_Functions.cpp  Mathem_Fun.cpp  Mathem_Fun.h  Mathematical_Functions.sln  Mathematical_Functions.vcxproj  Mathematical_Functions.vcxproj.filters  Xren_Vsakaj.cpp
Urok5/Zadanie2/: .gitignore  Class_Counter.cpp  Class_Counter.h  Counter2.cpp  Kounter2.sln  Kounter2.vcxproj  Kounter2.vcxproj.filters  Vsakoe.cpp
Urok5/Zadanie3/: .gitignore  Class_Equilateral_Triangle.h  Class_Isosceles_Triangle.h  Class_Quadrangle.h  Class_Reectangle.h  Class_Square.h  Class_Triangle.h  Figures_Infos2.sln  Figures_Infos2.vcxproj  Figures_Infos2.vcxproj.filters
Urok6/Zadanie1/: .gitignore  Mode.cpp  Preprocesornye_Derektivy.sln  Preprocesornye_Derektivy.vcxproj
Urok6/Zadanie2/: .gitignore  Macros_Sub.sln  Macros_Sub.vcxproj  Macros_Sub.vcxproj.filters  Makros_Sub.cpp
Urok7/Zadanie1/: .gitignore  Simple_Exception.cpp  Simple_exceptions.sln  Simple_exceptions.vcxproj
Urok7/Zadanie2/: .gitignore  Class_Domain_error.cpp  Class_Domain_error.h  Class_Equilateral_Triangle.cpp  Class_Figure.cpp  Class_Figure.h  Class_Isosceles_Triangle.cpp  Class_Parallelogram.cpp  Class_Parallelogram.h  Class_Quadrangle.cpp  Class_Quadrangle.h  Class_Reectangle.cpp  Class_Rhombu.cpp  Class_Rhombus.h  Class_Right_Triangle.cpp  Class_Square.cpp  Class_Triangle.cpp  Class_Triangle.h  Exception_constructor.sln  Exception_constructor.vcxproj  Exception_constructor.vcxproj.filters  Exceptions_Constructors.cpp
Urok8/Zadanie1/: .gitignore  Comparisons_Fractions.cpp  Comparisons_fractions.sln  Comparisons_fractions.vcxproj  Comparisons_fractions.vcxproj.filters
Urok8/Zadanie2/: .gitignore  Comparisons_Fractions2.cpp  Comparisons_fractions2.sln  Comparisons_fractions2.vcxproj  Comparisons_fractions2.vcxproj.filters
Urok9/Zadanie2/my_first_cmake_project2/: CMakeLists.txt  Class_Figure.h  Class_Parallelogram.cpp  Class_Reectangle.cpp  Class_Right_Triangle.h
(+241 files in other folders)
